--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,4 +10,15 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <!-- from node_modules -->
+  <script
+    async
+    src="node_modules/@material-tailwind/html/scripts/ripple.js"
+  ></script>
+
+  <!-- from cdn -->
+  <script
+    async
+    src="https://unpkg.com/@material-tailwind/html@latest/scripts/ripple.js"
+  ></script>
 </html>
